# mini-comp

./: Makefile  README.md  dune-project  mini_comp.opam  test_input.mini
lib/: ast.ml  dune  evaluator.ml  lexer.ml  lexer.mli  parser.ml  parser.mli  token.ml
test/: dune
