(lang dune 3.13)

(name mini_comp)

(generate_opam_files true)

(source
 (github Callum-Irving/mini-comp))

(authors "Callum Irving")
(maintainers "Callum Irving")
(license MIT)

(documentation https://url/to/documentation)

(package
 (name mini_comp)
 (synopsis "A mini compiler.")
 (description "A mini compiler.")
 (depends ocaml dune)
 (tags
  (compiler)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
